@@ -19,6 +19,6 @@ DIST github.com-prometheus-procfs-780932d4fbbe0e69b84c34c20f5c8d0981e109ea.tar.g
 DIST postfix_exporter-0.1.2.tar.gz 11552 BLAKE2B 987c81482fc984e8f6c870fdaf7ce2ef67b3fa66e5782713a645d35b76a1bde1dde97a79705569d1423a9356309d0b7240c77dba386127e8a5035990220d2a62 SHA512 579793281dedd858538ab9a931e0003cfc9989204ebf4352dd4860e5a7f62b919d77a9e0facb9daff6706771010f9e807061dace8cb88928635d55111c7c482a
 DIST postfix_exporter-0.2.0.tar.gz 12119 BLAKE2B 3c5b28f31e38bbd28dc4f5d5d7f25db0711595698842e0629e6d5336e80bc22d93ebee35533b94d3ebc07eb48ab9da8c31e7ac0cd759eb3e20fa0d90329a81c4 SHA512 a8e5be3b9dca47111f32981f112e11f2aa5976fc37ca8a1a64e03ea732fa9d3d6963ce03e401b908485097556fcdfb7ef7276372e8a068aab719910f1a9c346f
 EBUILD postfix_exporter-0.1.2.ebuild 1851 BLAKE2B 101c64cdf667044ff1cd43cdf5500386c4e3d26de962c6e25fd638422f1d1d86ad012ba51ea8421e884ab97efc59a4e8e0a6c5b2d5df5dcc6b22cb50a579bfdc SHA512 eafd06530a5bd5344801d7ed94622ce373372a2b31ab456f50164ae19387c4bf49e8944cbbcb9a792458f28ce7d05f9a959a60d2c5176f16b7997ab215beb695
-EBUILD postfix_exporter-0.2.0.ebuild 2142 BLAKE2B 78bb2fa9ddfaab1f544b525cff80d17b7047d63059f538703004003c4fa309442efe65c6ebaae0544eb40b6b394ea5485b7b4692dcfb5c2af20a565ec0d00cda SHA512 3d64b6a00e7116dc54bdd611e0e39e418bcd1a694e3b679a6d914f6050cc2ac9ba892c103d38bd03d551231a4afc68296fb4999838355c8405c4b8ab45bf6a4b
-MISC ChangeLog 531 BLAKE2B 2d87e31525a0a865c6a578445abb9e54ff521437a0fedaebae7de1aceff5f5024ac99158d9a85c370a20df6dffc97ee36653f5ed924964bb4d0b8b59a630bfcf SHA512 e93af2fd47ba199e87015bd5dc873ce9bb0651d132280d8f766c9d95b862213247994d32c609d5eb122945aacd366b3c96d1f051288c9b40ea716db1561d8dc3
+EBUILD postfix_exporter-0.2.0-r1.ebuild 2132 BLAKE2B f5b8ad941c863c494d00ea67ec4a5e5e1ed2d73ce6936c5addef7a2502aa84ef8aa92f369b1de92f26eebb9e1fa8cd667409204b1da6fed4578966fda83585d9 SHA512 b47e792218a73a30b9982e409766ffb0d0bfd7498e511fee6aa7b5c4fbb8a00b474b0f2db5f06c7fe5276d101f29f1e57df6753e0d9168e1737c10b9d7cc7bce
+MISC ChangeLog 756 BLAKE2B 34804d565adae5adc83ecb4abc287f5e4db09fac220e198e793ea732aba212cfeddaa3417073d654e1e3529196ca707a15dd2c7990e9b255062bd20aa4a1192c SHA512 069a2bf360efc20d90966aa90a15f22b6b43b298e477d79e219e2c273db5ed574b2ed6eafc5b4f32d9a1ea95b361de76b33103fd810f507b44d24cd1dd80c4d3
 MISC metadata.xml 255 BLAKE2B 1132f0657024f17717e5191a4992978685715f9abb96052db6399468506deaa85454efcaf58c7dcebfe5e1cf8948c767a7b001832d50c7d9dc162b0ff1395361 SHA512 36fb59a02d322553d6bfad2deeff884cc782c54bbb01a3fb344767fb43536905c43950df368e645d08ba9c48f3ec13c05b1d3c827fa12581c164623d2c174d73
